# MLOps-capstone-project

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  setup.py
docs/: conf.py  index.rst  mkdocs.yml
docs/docs/: index.md
notebooks/: data.csv  exp1.ipynb
