[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "mlops_capstone_project"
version = "0.0.1"
description = "This is a MLOps capstone project"
authors = [
  { name = "Emon" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.10.0"


[tool.ruff]
line-length = 99
src = ["mlops_capstone_project"]
include = ["pyproject.toml", "mlops_capstone_project/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["mlops_capstone_project"]
force-sort-within-sections = true

